# autopilot_manager

./: .clang-format  .gitignore  .rosinstall  .rosinstall.galactic  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  com.auterion.autopilot_manager.conf  package.xml
.github/: pull_request_template.md
.github/workflows/: build.yml  build_pkg_multi_arch.yaml  build_pkg_multi_arch.yml  build_ubuntu.yml  code_style.yml  cppcheck.yml
data/config/: autopilot_manager.conf
data/example/custom_action/: custom_action.json  custom_action_sitl.json
data/example/custom_action/custom_action_scripts/: dummy_air_quality_sensor.py  dummy_cargo_compartment.py  dummy_safe_landing.py  dummy_winch.py  gimbal_controls.py
debian/: changelog  control  copyright  rules
include/: AutopilotManager.hpp  AutopilotManagerConfig.hpp  DbusInterface.hpp
launch/: autopilot_manager.launch  autopilot_manager_sim.launch  autopilot_manager_sim_with_logging.launch  record_bag.launch  record_bag_sim.launch  reliability_override.yaml  static_tf.launch  static_tf_replay.launch
rviz/: landing_mapper.rviz  landing_mapper_base_link.rviz  landing_mapper_sim.rviz
src/: AutopilotManager.cpp  AutopilotManagerConfig.cpp  DbusInterface.cpp  main.cpp  module_registry.hpp
src/helpers/: CMakeLists.txt  helpers.cpp  helpers.hpp
src/modules/: CMakeLists.txt  MissionManager.cpp  MissionManager.hpp  ModuleBase.hpp  ObstacleAvoidanceModule.hpp  common.h
src/modules/collision_avoidance_manager/: CMakeLists.txt  CollisionAvoidanceManager.cpp  CollisionAvoidanceManager.hpp
src/modules/landing_manager/: CMakeLists.txt  LandingManager.cpp  LandingManager.hpp  MapVisualizer.cpp  MapVisualizer.hpp  common.h
src/modules/mission_manager/: CMakeLists.txt  CustomActionHandler.cpp  CustomActionHandler.hpp  MissionManager.cpp  MissionManager.hpp
src/modules/sensor_manager/: CMakeLists.txt  SensorManager.cpp  SensorManager.hpp  TimeSync.cpp  TimeSync.hpp  common.h
tools/: apm  check_code_format.sh  fix_style.sh  generate_debian_changelog.sh
tools/dev/: check_code_format.sh  generate_debian_changelog.sh
tools/packaging/: cross_compile_dependencies.sh  defaults.yaml
