<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autopilot-manager</name>
  <version>1.2.5</version>
  <description>Autopilot Manager</description>

  <maintainer email="nuno@auterion.com">Nuno Marques</maintainer>
  <author email="nuno@auterion.com">Nuno Marques</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>Eigen3</build_depend>

  <depend>image_downsampler</depend>
  <depend>landing_mapper</depend>
  <depend>landing_planner</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>tbb</depend>
  <depend>tf2_ros</depend>
  <depend>timing_tools</depend>
  <depend>visualization_msgs</depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>Eigen3</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
